<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:background="@drawable/mainbackground_gradient">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@drawable/mainbackground_gradient">
   <TextView
       android:id="@+id/title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:text="@string/app_name1"
       android:layout_marginTop="20dp"
       android:textSize="30sp"
       android:textColor="@color/titleColor"
       android:fontFamily="@font/magnolia_script"
       android:textStyle="bold"
       />

   <EditText
       android:id="@+id/et_city_name"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/title"
       android:layout_marginTop="10dp"
       android:layout_marginHorizontal="30dp"
       android:hint="@string/hint_set_city_name"
       android:background="@color/etBackground"
       android:fontFamily="@font/times"
      />
   <Button
       android:id="@+id/btn_current_weather_by_city_name"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/et_city_name"
       android:layout_marginTop="5dp"
       android:layout_marginHorizontal="30dp"
       android:text="@string/btn_city_weather_check"
       android:onClick="Btn_Current_Weather"
       android:fontFamily="@font/times"
       android:textSize="16sp"
       android:alpha="0.65"
      />
   <Button
       android:id="@+id/btn_forecast_weather_by_city_name"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/btn_current_weather_by_city_name"
       android:layout_marginTop="5dp"
       android:layout_marginHorizontal="30dp"
       android:text="@string/btn_forecast_city_weather_check"
       android:onClick="Btn_Forecast_Weather"
       android:fontFamily="@font/times"
       android:textSize="16sp"
       android:alpha="0.65"
       />
   <View
       android:id="@+id/horizontal_line1"
       android:layout_width="match_parent"
       android:layout_height="2dp"
       android:layout_below="@id/btn_forecast_weather_by_city_name"
       android:layout_marginTop="15dp"
       android:layout_marginHorizontal="30dp"
       android:background="@color/tableHeader"/>
   <Button
       android:id="@+id/btn_current_weather_by_gps"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/horizontal_line1"
       android:layout_marginTop="15dp"
       android:layout_marginHorizontal="30dp"
       android:text="@string/btn_gps_weather_check"
       android:onClick="Btn_Current_Weather_GPS"
       android:fontFamily="@font/times"
       android:textSize="16sp"
       android:alpha="0.65"
       />
   <Button
       android:id="@+id/btn_forecast_weather_by_gps"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/btn_current_weather_by_gps"
       android:layout_marginTop="5dp"
       android:layout_marginHorizontal="30dp"
       android:text="@string/btn_forecast_gps_weather_check"
       android:onClick="Btn_Forecast_Weather"
       android:fontFamily="@font/times"
       android:textSize="16sp"
       android:alpha="0.65"
       />

   <View
       android:id="@+id/horizontal_line2"
       android:layout_width="match_parent"
       android:layout_height="2dp"
       android:layout_below="@id/btn_forecast_weather_by_gps"
       android:layout_marginTop="15dp"
       android:layout_marginHorizontal="30dp"
       android:background="@color/tableHeader"/>
   <Button
       android:id="@+id/btn_favorites_places"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/horizontal_line2"
       android:layout_marginTop="15dp"
       android:layout_marginHorizontal="30dp"
       android:text="@string/btn_favorites_places"
       android:onClick="Btn_favorites_places"
       android:fontFamily="@font/times"
       android:textSize="16sp"
       android:alpha="0.65"
       />
   <Button
       android:id="@+id/btn_settings_application"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/btn_favorites_places"
       android:layout_marginTop="5dp"
       android:layout_marginHorizontal="30dp"
       android:text="@string/btn_settings_application"
       android:onClick="Btn_settings_application"
       android:fontFamily="@font/times"
       android:textSize="16sp"
       android:alpha="0.65"
       />
</RelativeLayout>
</ScrollView>