<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/img_forecast_search"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TableLayout
        android:layout_below="@+id/img_current_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp">
        <TableRow
            android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingHorizontal="5dp"
            android:text="@string/datetime"
            android:gravity="center_vertical"
            android:background="@drawable/cell_frame"/>

        <TextView
            android:id="@+id/txt_set_forecast_Datetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/cell_frame_row"
            />
        </TableRow>
        <TableRow
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingHorizontal="5dp"
                android:text="@string/place"
                android:gravity="center_vertical"
                android:background="@drawable/cell_frame"/>

            <TextView
                android:id="@+id/txt_set_forecast_Place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@drawable/cell_frame_row"
                />
        </TableRow>
        <TableRow
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingHorizontal="5dp"
                android:text="@string/description"
                android:gravity="center_vertical"
                android:background="@drawable/cell_frame"/>

            <TextView
                android:id="@+id/txt_set_forecast_Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@drawable/cell_frame_row"
                />
        </TableRow>
        <TableRow
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cell_frame"
                android:gravity="center"
                android:text="@string/main_values"
                android:textSize="14sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/temperature" />
            <TextView
                android:id="@+id/txt_set_forecast_Temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@drawable/cell_frame_row"/>
        </TableRow>
        <TableRow
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/temp_feel_like" />
            <TextView
                android:id="@+id/txt_set_forecast_TempFeelsLike"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@drawable/cell_frame_row"/>
        </TableRow>
        <TableRow
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/min_temp" />
            <TextView
                android:id="@+id/txt_set_forecast_TempMin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@drawable/cell_frame_row"/>
        </TableRow>
        <TableRow
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/max_temp" />
            <TextView
                android:id="@+id/txt_set_forecast_TempMax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@drawable/cell_frame_row"/>
        </TableRow>
        <TableRow
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingHorizontal="5dp"

                android:text="@string/pressure"
                android:gravity="center_vertical"
                android:background="@drawable/cell_frame"/>

            <TextView
                android:id="@+id/txt_set_forecast_Pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@drawable/cell_frame_row" />
        </TableRow>
        <TableRow
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/humidity"
                android:paddingHorizontal="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/cell_frame"/>

            <TextView
                android:id="@+id/txt_set_forecast_Humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@drawable/cell_frame_row"/>
        </TableRow>
        <TableRow
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cell_frame_row"
                android:gravity="center"
                android:text="@string/wind"
                android:textSize="14sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/wind_speed"
                android:paddingHorizontal="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/cell_frame"/>

            <TextView
                android:id="@+id/txt_set_forecast_WindSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@drawable/cell_frame_row"/>
        </TableRow>
        <TableRow
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/wind_degree"
                android:paddingHorizontal="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/cell_frame"/>

            <TextView
                android:id="@+id/txt_set_forecast_WindDegree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@drawable/cell_frame_row"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        android:text="@string/swipe_left_right"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/times"
        android:textStyle="bold"
        android:textColor="@color/tableHeader"
        />
    <Button
        android:id="@+id/btn_favorites_places_forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/btn_save_location"
        android:onClick="Btn_save_location_to_realm"
        android:fontFamily="@font/times"
        android:textSize="16sp"
        android:alpha="0.65"
        />
</LinearLayout>