<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CurrentWeatherActivityGPS"
    android:background="@drawable/mainbackground_gradient">

    <TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/title_current_weather"
    android:layout_marginTop="20dp"
    android:textSize="30sp"
    android:textColor="@color/titleColor"
    android:fontFamily="@font/magnolia_script"
    android:textStyle="bold"
    />
    <ImageView
        android:id="@+id/img_current_search"
        android:layout_below="@id/title"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_current_search"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical">

        <TableRow android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/place" />

            <TextView
                android:id="@+id/txt_setPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame_row"
                android:gravity="center" />
        </TableRow>

        <TableRow android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/txt_setDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame_row"
                android:gravity="center" />
        </TableRow>

        <TableRow android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cell_frame"
                android:gravity="center"
                android:text="@string/main_values"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/temperature" />

            <TextView
                android:id="@+id/txt_setTemperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame_row"
                android:gravity="center" />
        </TableRow>

        <TableRow android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/temp_feel_like" />

            <TextView
                android:id="@+id/txt_setTempFeelsLike"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame_row"
                android:gravity="center" />
        </TableRow>

        <TableRow android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/min_temp" />

            <TextView
                android:id="@+id/txt_setTempMin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame_row"
                android:gravity="center" />
        </TableRow>

        <TableRow android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/max_temp" />

            <TextView
                android:id="@+id/txt_setTempMax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame_row"
                android:gravity="center" />
        </TableRow>

        <TableRow android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/visibility" />

            <TextView
                android:id="@+id/txt_setVisibility"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame_row"
                android:gravity="center" />
        </TableRow>

        <TableRow android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"

                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/pressure" />

            <TextView
                android:id="@+id/txt_setPressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame_row"
                android:gravity="center" />
        </TableRow>

        <TableRow android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/txt_setHumidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame_row"
                android:gravity="center" />
        </TableRow>

        <TableRow android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cell_frame_row"
                android:gravity="center"
                android:text="@string/wind"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/wind_speed" />

            <TextView
                android:id="@+id/txt_setWindSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame_row"
                android:gravity="center" />
        </TableRow>

        <TableRow android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/wind_degree" />

            <TextView
                android:id="@+id/txt_setWindDegree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/cell_frame_row"
                android:gravity="center" />
        </TableRow>

    </TableLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table_layout"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/btn_save_location"
        android:onClick="Btn_save_location_to_realm"
        android:fontFamily="@font/times"
        android:textSize="16sp"
        android:alpha="0.65"
        />

</RelativeLayout>